fix(YALB-1117): merge alignment work into layout work

--- a/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
+++ b/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
@@ -134,9 +134,7 @@ $modal-speed: var(--animation-speed-slow);
   }
 
   @media (max-width: tokens.$break-s - 0.05) {
-    &:not(.media-grid-modal__pager-item--total):not(
-        [data-media-grid-modal-item-active='true']
-      ) {
+    &:not(.media-grid-modal__pager-item--total):not([data-media-grid-modal-item-active='true']) {
       display: none;
     }
 
